--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>
+            Hello, World!
+        </title>
 
     </head>
     <body>
+        <h1>Welcome to my page </h1>
         <p>Hello</p>
     </body>
 </html>
