--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-        <h1>Welcome to my page </h1>
+        <h1 style="color:red;" >Welcome to my page </h1>
         <h2> Hello </h2>
         <p>Hello</p>
     </body>
