--- a/hello.html
+++ b/hello.html
@@ -14,6 +14,6 @@
     <body>
         <h1>Welcome to my page! </h1>
         <h2> Hello </h2>
-        <p>Hello</p>
+        <p>What's your name?</p>
     </body>
 </html>
